
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int va_list ;


 char* __progname ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int stderr ;
 int vfprintf (int ,char const*,int ) ;

void
verrx(int eval, const char *fmt, va_list ap)
{
 (void)fprintf(stderr, "%s: ", __progname);
 if (fmt != ((void*)0))
  (void)vfprintf(stderr, fmt, ap);
 (void)fprintf(stderr, "\n");
 exit(eval);
}
